# crud-deploy-studie

./: .gitignore  README.md  config.py  pyproject.toml
src/: __init__.py  api.py
